package dataControllerUtils.protobuf;

import "./Timestamp.proto";

message TimeInterval {
extensions 3 to 103;
    optional Timestamp startTime = 1;
    optional Timestamp endTime = 2;
}
